[tool.poetry]
name = "lgtr-infra"
version = "0.1.1"
description = ""
authors = ["Willy <wolf1986@gmail.com>"]
readme = "README.md"
packages = [{ include = "lgtr_infra" }]

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
uuid = ">=1.30"
dacite = ">=1.8.0"
simple-parsing = ">=0.1"
retry = ">=0.9.2"
cloudpathlib = "^0.16.0"
httpx = "^0.25.0"
oauth2client = ">=4.1"
pandas = ">=2.2.2"
gspread = ">=6.1.2"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.1"
toml = ">=0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
